style.css
html {
    scroll-behavior: smooth;
}
a {color: #FFFFFF;}


/* BACKGROUND */
body {
    margin: 0;
    background-color: #2B2B36;
}

.main {
    margin-left: 200px;
    padding: 0px 10px;
    height: 100%;
}

/* NAVIGATION */
.nav {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #22252C;
    padding-top: 20px;
}

.nav a {
    padding: 10px 10px 8px 16px;
    text-decoration: none;
    font-size: 20px;
    font-family: Consolas, monaco, monospace;
    color: #FBFAFB;
    display: block;
}

.nav #current {
    background-color: #E14658;
    color: #FFFFFF;
}

.nav a:hover, .active {
    background-color: #E14658;
    color: #FFFFFF;
}

/* change padding when screen is smaller */
@media screen and (max-height: 450px) {
    nav {padding-top: 10px;}
    nav a {font-size: 15px;}
}


/* HOME PAGE */
#main-title h1 {
    margin-top: 20%;
    text-align: center;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 64px;
    color: #FBFAFB;
}

#main-title p {
    text-align: center;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 18px;
    color: #FFFFFF;
}

#status {
    text-align: center;
    margin-top: 40%;
    max-width: 700px;
    margin: auto;
    padding: 20px 5px;
    text-decoration: none;
    font-size: 24px;
    font-family: Consolas, monaco, monospace;
    color: #FFFFFF;
    display: block;
    background-color: #E14658;
}

#website {
    text-align: center;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
    font-size: 16px;
    color: #FFFFFF;
}


/* PROJECT PAGES */
.proj-header {
    text-align: center;
    margin: auto 0;
    padding: 20px 5px;
    text-decoration: none;
    font-family: Consolas, monaco, monospace;
    display: block;
    background-color: #E14658;
}

.sticky {
    position: fixed;
    top: 0;
}

.proj-header .proj-title {
    font-size: 36px;
    line-height: 1.2;
    color: #FFFFFF;
}

.proj-header .proj-status {
    font-size: 18px;
    color: #FFFFFF;
}

.proj-header .proj-dates {
    font-size: 18px;
    color: #FFFFFF;
}

.proj-header .proj-shortcuts {
    display: flex;
    justify-content: space-evenly;
    font-size: 12px;
    color: #262830;
    text-decoration: none;
}

.proj-text {
    margin: auto;
    padding: 20px 100px;
    text-decoration: none;
    z-index: 3;
    font-size: 18px;
    font-family: Tahoma, Verdana, Segoe, sans-serif;
    display: block;
    background-color: #262830;
    color: #FFFFFF;
    position: fixed;
    text-decoration: none;
}



/* ABOUT PAGE */
#about-header {
    text-align: center;
    margin: auto;
    padding: 20px 5px;
    text-decoration: none;
    font-size: 36px;
    font-family: Consolas, monaco, monospace;
    color: #FFFFFF;
    display: block;
    background-color: #E14658;
}

#about-text {
    text-align: left;
    font-family: Tahoma, Verdana, Segoe, sans-serif;
    font-size: 18px;
    color: #FFFFFF;
    background-color: #262830;
    /* 
    text-align: left;
    position: relative;
    margin: auto;
    padding: 100px 100px;
    text-decoration: none;
    font-size: 18px;
    font-family: Tahoma, Verdana, Segoe, sans-serif;
    display: block;
    color: #FFFFFF;
    */
}

#github-link {
    text-align: center;
    font-family: Consolas, monaco, monospace;
    font-size: 18px;
    color: #FFFFFF;
}

